--- a/custom_components/ticket_system/manifest.json
+++ b/custom_components/ticket_system/manifest.json
@@ -5,5 +5,7 @@
   "config_flow": true,
   "documentation": "https://github.com/Fouton123/HA-Ticket-System",
   "iot_class": "local_polling",
-  "requirements": ["ical==9.2.0"]
+  "requirements": ["ical==9.2.0"],
+  "version": "1.1",
+  "loggers": ["tickets"]
 }
